.k8s/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: content-platform-ingress
  namespace: content-platform-staging
  annotations:
    kubernetes.io/ingress.class:                    "nginx"
    nginx.ingress.kubernetes.io/proxy-buffering:    "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    cert-manager.io/cluster-issuer:                 "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - staging.content-platform.lenincrew.tech
      secretName: content-platform-staging-tls
  rules:
    - host: staging.content-platform.lenincrew.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: content-platform
                port:
                  name: http
